Upgrade java/javafx to 24 and gradle to 8.14.3